src/main/java/org/example/org/example/generated/CCompilerParser.java
// Generated from C:/Users/arthu/OneDrive/Documentos/Faculdade/Compiladores/a3compiler/src/main/antlr/CCompiler.g4 by ANTLR 4.13.2
package org.example.generated;

    import java.math.BigDecimal;
    import java.util.Map;
    import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CCompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, INT=11, BOOL=12, DECIMAL=13, STRING=14, ID=15, OP=16, IF=17, 
		ELSE=18, FP=19, LP=20, FK=21, LK=22, OP_ASS=23, COMMA=24, SCOMMA=25, WS=26;
	public static final int
		RULE_prog = 0, RULE_main_function = 1, RULE_function = 2, RULE_function_body = 3, 
		RULE_declaration = 4, RULE_assignment = 5, RULE_expr = 6, RULE_term = 7, 
		RULE_printf_stmt = 8, RULE_factor = 9, RULE_type = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "main_function", "function", "function_body", "declaration", 
			"assignment", "expr", "term", "printf_stmt", "factor", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'+'", "'-'", "'*'", "'/'", "'printf'", "'int'", "'bool'", 
			"'decimal'", "'string'", null, null, null, null, null, null, "'if'", 
			"'else'", "'('", "')'", "'{'", "'}'", "'='", "','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "INT", 
			"BOOL", "DECIMAL", "STRING", "ID", "OP", "IF", "ELSE", "FP", "LP", "FK", 
			"LK", "OP_ASS", "COMMA", "SCOMMA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CCompiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public static class TypedValue {
	        public enum Kind { INT, BOOL, DECIMAL, STRING }

	        public final Kind kind;
	        public final Integer intVal;
	        public final Boolean boolVal;
	        public final BigDecimal decVal;
	        public final String strVal;

	        public TypedValue(Integer v)    { this.kind = Kind.INT;     this.intVal = v;    this.boolVal = null;    this.decVal = null;     this.strVal = null; }
	        public TypedValue(Boolean v)    { this.kind = Kind.BOOL;    this.intVal = null; this.boolVal = v;       this.decVal = null;     this.strVal = null; }
	        public TypedValue(BigDecimal v) { this.kind = Kind.DECIMAL; this.intVal = null; this.boolVal = null;    this.decVal = v;        this.strVal = null; }
	        public TypedValue(String v)     { this.kind = Kind.STRING;  this.intVal = null; this.boolVal = null;    this.decVal = null;     this.strVal = v;    }

	        @Override
	        public String toString() {
	            switch(kind) {
	                case INT: return intVal.toString();
	                case BOOL: return boolVal.toString();
	                case DECIMAL: return decVal.toPlainString();
	                case STRING: return strVal;
	                default: return "null";
	            }
	        }

	        public BigDecimal asBigDecimal() {
	            switch(kind) {
	                case INT: return new BigDecimal(intVal);
	                case DECIMAL: return decVal;
	                default: throw new RuntimeException("Not a numeric value: " + this);
	            }
	        }
	    }

	    private final Map<String, TypedValue> variables = new HashMap<>();

	    enum TypeKind { INT, BOOL, DECIMAL, STRING }
	    private boolean isNumeric(TypedValue v){
	        return v.kind == TypedValue.Kind.INT || v.kind == TypedValue.Kind.DECIMAL;
	    }

	    private boolean isAssignable(TypeKind declared, TypedValue val) {
	        switch(declared) {
	            case INT: return val.kind == TypedValue.Kind.INT;
	            case BOOL: return val.kind == TypedValue.Kind.BOOL;
	            case DECIMAL: return val.kind == TypedValue.Kind.DECIMAL || val.kind == TypedValue.Kind.INT;
	            case STRING: return val.kind == TypedValue.Kind.STRING;
	            default: return false;
	        }
	    }

	    private boolean isAssignable(TypedValue.Kind declared, TypedValue val) {
	        if (declared == TypedValue.Kind.DECIMAL) {
	            return val.kind == TypedValue.Kind.DECIMAL || val.kind == TypedValue.Kind.INT;
	        }
	        else {
	            return declared == val.kind;
	        }
	    }

	public CCompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public Main_functionContext main_function() {
			return getRuleContext(Main_functionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CCompilerParser.EOF, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			main_function();
			setState(26);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1920L) != 0)) {
				{
				{
				setState(23);
				function();
				}
				}
				setState(28);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(29);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_functionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode FP() { return getToken(CCompilerParser.FP, 0); }
		public TerminalNode LP() { return getToken(CCompilerParser.LP, 0); }
		public TerminalNode FK() { return getToken(CCompilerParser.FK, 0); }
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public TerminalNode LK() { return getToken(CCompilerParser.LK, 0); }
		public Main_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterMain_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitMain_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitMain_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_functionContext main_function() throws RecognitionException {
		Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			type();
			setState(32);
			match(T__0);
			setState(33);
			match(FP);
			setState(34);
			match(LP);
			setState(35);
			match(FK);
			setState(36);
			function_body();
			setState(37);
			match(LK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CCompilerParser.ID, 0); }
		public TerminalNode FP() { return getToken(CCompilerParser.FP, 0); }
		public TerminalNode LP() { return getToken(CCompilerParser.LP, 0); }
		public TerminalNode FK() { return getToken(CCompilerParser.FK, 0); }
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public TerminalNode LK() { return getToken(CCompilerParser.LK, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			type();
			setState(40);
			match(ID);
			setState(41);
			match(FP);
			setState(42);
			match(LP);
			setState(43);
			match(FK);
			setState(44);
			function_body();
			setState(45);
			match(LK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_bodyContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> SCOMMA() { return getTokens(CCompilerParser.SCOMMA); }
		public TerminalNode SCOMMA(int i) {
			return getToken(CCompilerParser.SCOMMA, i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<Printf_stmtContext> printf_stmt() {
			return getRuleContexts(Printf_stmtContext.class);
		}
		public Printf_stmtContext printf_stmt(int i) {
			return getRuleContext(Printf_stmtContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Function_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterFunction_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitFunction_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitFunction_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_bodyContext function_body() throws RecognitionException {
		Function_bodyContext _localctx = new Function_bodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 589760L) != 0)) {
				{
				setState(57);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(47);
					declaration();
					setState(48);
					match(SCOMMA);
					}
					break;
				case 2:
					{
					setState(50);
					assignment();
					setState(51);
					match(SCOMMA);
					}
					break;
				case 3:
					{
					setState(53);
					printf_stmt();
					}
					break;
				case 4:
					{
					setState(54);
					expr();
					setState(55);
					match(SCOMMA);
					}
					break;
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TypeContext t;
		public Token id;
		public ExprContext e;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CCompilerParser.ID, 0); }
		public TerminalNode OP_ASS() { return getToken(CCompilerParser.OP_ASS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((DeclarationContext)_localctx).t = type();
			setState(63);
			((DeclarationContext)_localctx).id = match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_ASS) {
				{
				setState(64);
				match(OP_ASS);
				setState(65);
				((DeclarationContext)_localctx).e = expr();
				}
			}


			    String name = ((DeclarationContext)_localctx).id.getText();
			    if (variables.containsKey(name)) {
			        throw new RuntimeException("Variable already declared: '" + name
			            + "' at line " + ((DeclarationContext)_localctx).id.getLine()
			            + ":" + ((DeclarationContext)_localctx).id.getCharPositionInLine()
			        );
			    }

			    TypedValue val = null;
			    if (((DeclarationContext)_localctx).e.value != null) val = ((DeclarationContext)_localctx).e.value;

			    if (val == null) {
			        switch(((DeclarationContext)_localctx).t.typeKind) {
			            case INT: val = new TypedValue(0); break;
			            case BOOL: val = new TypedValue(false); break;
			            case DECIMAL: val = new TypedValue(new BigDecimal("0")); break;
			        }
			    }
			    else {
			        if (!isAssignable(((DeclarationContext)_localctx).t.typeKind, val))
			            throw new RuntimeException("Cannot assign " + val.kind + " to " + ((DeclarationContext)_localctx).t.typeKind);

			        if (((DeclarationContext)_localctx).t.typeKind == TypeKind.DECIMAL && val.kind == TypedValue.Kind.INT)
			            val = new TypedValue(val.asBigDecimal());
			    }

			    variables.put(((DeclarationContext)_localctx).id.getText(), val);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Token id;
		public ExprContext e;
		public TerminalNode OP_ASS() { return getToken(CCompilerParser.OP_ASS, 0); }
		public TerminalNode ID() { return getToken(CCompilerParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			((AssignmentContext)_localctx).id = match(ID);
			setState(71);
			match(OP_ASS);
			setState(72);
			((AssignmentContext)_localctx).e = expr();

			    TypedValue val = ((AssignmentContext)_localctx).e.value;
			    if (!variables.containsKey(((AssignmentContext)_localctx).id.getText()))
			        throw new RuntimeException("Undefined variable: " + ((AssignmentContext)_localctx).id.getText());

			    TypedValue old = variables.get(((AssignmentContext)_localctx).id.getText());
			    if (old.kind == TypedValue.Kind.DECIMAL && val.kind == TypedValue.Kind.INT)
			        val = new TypedValue(val.asBigDecimal());

			    if (!isAssignable(old.kind, val))
			        throw new RuntimeException("Cannot assign " + val.kind + " to variable of type " + old.kind);

			    variables.put(((AssignmentContext)_localctx).id.getText(), val);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public TypedValue value;
		public TermContext left;
		public Token op;
		public TermContext right;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CCompilerListener ) ((CCompilerListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CCompilerVisitor ) return ((CCompilerVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((ExprContext)_localctx).left = term();

			    ((ExprContext)_localctx).value =  ((ExprContext)_localctx).left.value;

			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==T__2) {
				{
				{
				setState(77);
				((ExprContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__1 || _la==T__2) ) {
					((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(78);
				((ExprContext)_localctx).right = term();

				        if (((ExprContext)_localctx).op.getText().equals("+") &&
				            (_localctx.value.kind == TypedValue.Kind.STRING || ((ExprContext)_localctx).right.value.kind == TypedValue.Kind.STRING)) {
				            String a = _localctx.value.toString();
				            String b = ((ExprContext)_localctx).right.value.toString();
				            ((ExprContext)_localctx).value =  new TypedValue(a + b);
				        } else {
				            if (!isNumeric(_localctx.value) || !isNumeric(((ExprContext)_localctx).right.value))
				              throw new RuntimeException("Operator " + ((ExprContext)_localctx).op.getText() + " requires numeric operands");

				            if (_localctx.value.kind == TypedValue.Kind.DECIMAL || ((ExprContext)_localctx).right.value.kind == TypedValue.Kind.DECIMAL) {
				                BigDecimal a = _localctx.value.asBigDecimal();
				                BigDecimal b = ((ExprContext)_localctx).right.value.asBigDecimal();
				                BigDecimal res = ((ExprContext)_localctx).op.getText().equals("+") ? a.add(b) : a.subtract(b);

				                ((ExprContext)_localctx).value =  new TypedValue(res);
				            }
				            else
				            {
				                int a = _localctx.value.intVal;
				                int b = ((ExprContext)_localctx).right.value.intVal;
				                int r = ((ExprContext)_localctx).op.getText().equals("+") ? (a + b) : (a - b);

				                ((ExprContext)_localctx).value =  new TypedValue(r);
				            }
				        }
				    
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
